[firefox] Fix back/forward button background not showing when the mouse pointer is on buttons (fx128)

--- a/etc/firefox/chrome/userChrome-common.css
+++ b/etc/firefox/chrome/userChrome-common.css
@@ -35,14 +35,6 @@
     --toolbarbutton-inner-padding: 4px !important;
 }
 
-#nav-bar #back-button > .toolbarbutton-icon,
-#nav-bar #forward-button > .toolbarbutton-icon{
-    -moz-appearance: none !important;
-    border: 0px solid transparent !important;
-    box-shadow: none !important;
-    background: none !important;
-}
-
 #nav-bar #back-button {
     -moz-padding-start: 0px !important;
 }
